Fix visiblity of table footer controls
Previously, these could be hard to access if the table had a large enough # of
columns to trigger horizontal scrolling. Now they're sticky and should always be
visible.

PiperOrigin-RevId: 508385463

--- a/lit_nlp/client/elements/table.css
+++ b/lit_nlp/client/elements/table.css
@@ -225,12 +225,30 @@ tbody td {
 .footer {
   color: #04394b;
   font-weight: 400;
-  font-size: 10pt;
-  line-height: 12pt;
-  padding: 3px;
+  padding: 3px 0;
 
   display: flex;
   flex-direction: row;
+}
+
+.footer .pagination-controls-group {
+  position: sticky;
+  left: 4px;
+
+  display: flex;
+  align-items: center;
+}
+
+.icon-button-fix-offset {
+  vertical-align: -3px;
+}
+
+.footer .export-controls-group {
+  position: sticky;
+  right: 4px;
+
+  display: flex;
+  align-items: center;
 }
 
 .footer-spacer {
